k8s-dnsperf-bench.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dnsperf-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: dnsperf
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dnsperf
  name: dnsperf
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnsperf
  template:
    metadata:
      labels:
        app: dnsperf
        app.kubernetes.io/name: dnsperf
        app.kubernetes.io/version: "2.16.0-1"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
      automountServiceAccountToken: false
      containers:
      - env:
        - name: DNSPERF_RECORDS_INPUT
          value: "/opt/records.txt"
        - name: EXTRA_ARGS
          value: "-c 1 -T 1 -l 30 -t 5 -Q 100000"
        image: guessi/dnsperf:2.16.0-1
        imagePullPolicy: IfNotPresent
        name: dnsperf
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /opt/
          name: dns-records-volume
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: dnsperf
      terminationGracePeriodSeconds: 5
      volumes:
      - configMap:
          defaultMode: 420
          name: dns-records-config
        name: dns-records-volume
